   page.  If you are using an old template, this should be the only change
   you need to make in the main dissertation file (dissertation.tex).  All 
	other changes were made to the uathesis.cls file.

   Some minor rewording of the Approval Form and Statement by Author to match
	the current grad college examples.  Also, for electronic dissertations, the 
	Statement by Author now has the typed name instead of a line for a signature 
	(this does not	appear to be the case for the Master Thesis for some reason). 

	Support has now been added for 3 flavors of Creative Commons licenses. 
	While trying to get the hyperlink to the CC license website in the 
	Statement by Author page to work, I ended up rewriting the call to the
	hyperref package.  I also threw out the old Makefile and used my own. 
	
	Based on the TODO I attempted to figure out the footskip issue.  This is
	supposed to be the distance between the bottom of text and the bottom of 
	the footnotes, but changing this value seems to have absolutely no 
	effect on the document.  This does not appear to be a critical issue, so
	I leave this oddity to future troubleshooters.  I have left in my 
	testing footnote on the first page of Chapter 1.

3 July 2013

	Added new template for proposals (e.g. dissertation/thesis proposal).  A
	proposal uses basically the same format as a thesis, except for minor formatting
	differences.  A proposal does not use chapters, so chapters are treated similarly
	to sections.  A chapter heading does not say "Chapter", is left-justified, and
	is not separated into 2 lines.  Also, proposals don't typically have SBA,
	dedication, or acknowledgement.

	Minor reformatting and rewording of several dissertation forms to match the
	current graduate college examples.  Also added a template folder to house the
	'current' example forms from graduate college.  The manual
	ETD_Diss_Manual.pdf is also updated and moved into the template folder.
