@@ -1,9 +1,11 @@
 # The University of Arizona Thesis Template
 
 This is a LaTeX thesis template for graduate students at The University of
-Arizona. This template was last updated in 2013 to match current Graduate
+Arizona. This template was last updated in 2023 to match current Graduate
 College requirements.
 
-In addition, a new class format for writting dissertation proposals was added.
+*BREAKING CHANGES*
+The template is highly modified to run with the newer methods of latex, such as using latexmk, lualatex, biblatex.
+The latex environment used is VScode with the Latex Workshop extension running on Miktex
 
 Please see README.txt for further information.
