@@ -107,3 +107,8 @@ August 2004
 	'current' example forms from graduate college.  The manual
 	ETD_Diss_Manual.pdf is also updated and moved into the template folder.
 
+29 March 2023
+	Updated the style to newer standards, updated the template folder to newer 'example
+	forms' from the graduate college. Removed the make files and switched to a latexmk 
+	to automagically arrive at the pdf. The template is also reworked to use VScode and
+	Latex Workshop with Miktex.
